--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -57,7 +57,7 @@ jobs:
       with:
         # Path to SARIF file relative to the root of the repository
         sarif_file: veracode-results.sarif
-- name: Veracode scan results to Github issues Action
+ name: Veracode scan results to Github issues Action
   # You may pin to the exact commit or the version.
   # uses: veracode/veracode-flaws-to-issues@f4c354711a2b44ae3c2741c76fff935814c7f077
   uses: veracode/veracode-flaws-to-issues@v2.1.0
