--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,3 +66,22 @@ jobs:
               with:
                   gh_access_token: ${{ secrets.GITHUB_TOKEN }}
                   report_path: 'robotreport'
+name: Veracode scan results to GitHub issues Action
+  # You may pin to the exact commit or the version.
+  # uses: veracode/veracode-flaws-to-issues@f4c354711a2b44ae3c2741c76fff935814c7f077
+  uses: veracode/veracode-flaws-to-issues@v2.1.0
+  with:
+    # Scan results file
+    scan-results-json: # default is filtered_results.json
+    # GitHub token to access the repo
+    github-token: # default is ${{ github.token }}
+    # Delay (in seconds) between entering Issues into GitHub (due to rate limiting)
+    wait-time: # optional, default is 2
+    # Rewrite 1
+    source_base_path_1: # optional
+    # Rewrite 2
+    source_base_path_2: # optional
+    # Rewrite 3
+    source_base_path_3: # optional
+    # fail pipeline upon findings (true | false)
+    fail_build: # optional
