--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -57,3 +57,20 @@ jobs:
       with:
         # Path to SARIF file relative to the root of the repository
         sarif_file: veracode-results.sarif
+name: Veracode Static Analysis Pipeline Scan and SARIF import
+  # You may pin to the exact commit or the version.
+  # uses: veracode/veracode-pipeline-scan-results-to-sarif@0129fdced6c68f7cad91b6cd6594cf9e0d5ab386
+  uses: veracode/veracode-pipeline-scan-results-to-sarif@v1.0.5
+  with:
+    # location of the pipeline json result file
+    pipeline-results-json: # default is results.json
+    # the path to the SARIF file as an output of the transformation
+    output-results-sarif: # default is veracode-results.sarif
+    # a path prefix conversion before publish in the SARIF file
+    source-base-path-1: # optional, default is 
+    # a path prefix conversion before publish in the SARIF file
+    source-base-path-2: # optional, default is 
+    # a path prefix conversion before publish in the SARIF file
+    source-base-path-3: # optional, default is 
+    # The conversion rule of Veracode findings to GitHub level
+    finding-rule-level: # default is 4:3:0
