--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -57,22 +57,20 @@ jobs:
       with:
         # Path to SARIF file relative to the root of the repository
         sarif_file: veracode-results.sarif
-name: Veracode scan results to GitHub issues Action
+  name: Veracode Profile Sandboxes Helper
   # You may pin to the exact commit or the version.
-  # uses: veracode/veracode-flaws-to-issues@f4c354711a2b44ae3c2741c76fff935814c7f077
-  uses: veracode/veracode-flaws-to-issues@v2.1.0
+  # uses: veracode/veracode-sandboxes-helper@baa0a8458605b92d261b6b8f7801fa67fdce501b
+  uses: veracode/veracode-sandboxes-helper@v1.0.0
   with:
-    # Scan results file
-    scan-results-json: # default is filtered_results.json
-    # GitHub token to access the repo
-    github-token: # default is ${{ github.token }}
-    # Delay (in seconds) between entering Issues into GitHub (due to rate limiting)
-    wait-time: # optional, default is 2
-    # Rewrite 1
-    source_base_path_1: # optional
-    # Rewrite 2
-    source_base_path_2: # optional
-    # Rewrite 3
-    source_base_path_3: # optional
-    # fail pipeline upon findings (true | false)
-    fail_build: # optional
+    # The activity expected from the Action: clean, promote-latest-scan, remove-sandbox
+    activity: # optional
+    # Veracode Application name
+    app-name: 
+    # Sandbox name for actions related to a specific Sandbox
+    sandbox-name: # optional
+    # The amount of oldest scanned-in sandboxes to remove
+    clean-amount: # optional, default is 1
+    # Deletes the sandbox after its promotion. Only works with the [promote] activity. Default is false
+    delete-on-promote: # optional, default is false
+    # The number of days which the sandbox had no activity
+    clean-modified-before: # optional, default is 0
