--- a/.github/workflows/stackhawk-analysis.yml
+++ b/.github/workflows/stackhawk-analysis.yml
@@ -52,10 +52,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Start your service
-        run: ./your-service.sh &                  # ✏️ Update this to run your own service to be scanned
+        run: docker-compose --up &                  # ✏️ Update this to run your own service to be scanned
 
       - name: Run HawkScan
-        uses: stackhawk/hawkscan-action@4c3258cd62248dac6d9fe91dd8d45928c697dee0
+        uses: stackhawk/hawkscan-action@v2
         continue-on-error: true                   # ✏️ Set to false to break your build on scan errors
         with:
           apiKey: ${{ secrets.HAWK_API_KEY }}
