--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -5,7 +5,7 @@ app:
   # -- The environment for the applicationId defined in the StackHawk platform. --
   env: Pre-Production # (required)
   # -- The url of your application to scan --
-  host: https://github.com/Subbuzzz/WebGoat
+  host: Subbuzzz/WebGoat
 
 
 # -- Customized Configuration for GraphQL/SOAP/OpenAPI, add here --
