--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -5,7 +5,7 @@ app:
   # -- The environment for the applicationId defined in the StackHawk platform. --
   env: Pre-Production # (required)
   # -- The url of your application to scan --
-  host: http://localhost:3000
+  host: http://localhost:8080
 
 
 # -- Customized Configuration for GraphQL/SOAP/OpenAPI, add here --
@@ -18,3 +18,9 @@ app:
 # -- Help Section --
   # Docs: https://docs.stackhawk.com/
   # Contact Support: support@stackhawk.com
+app:
+  waitForAppTarget:
+    path: /WebGoat
+hawk:
+  spider:
+    seedPaths: /WebGoat
