--- a/.github/workflows/stackhawk-analysis.yml
+++ b/.github/workflows/stackhawk-analysis.yml
@@ -52,7 +52,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Start your service
-        run: docker pull webgoat/webgoat-7.1
+        run: docker pull webgoat/webgoat-7.1 &
             docker run -p 8080:8080 -t webgoat/webgoat-7.1                  # ✏️ Update this to run your own service to be scanned
 
       - name: Run HawkScan
