--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -1,3 +1,6 @@
+run: 
+docker pull webgoat/webgoat-7.1
+docker run --detach -p 8080:8080 -t webgoat/webgoat-7.1
 # -- stackhawk configuration for WebGoat --
 app:
   # -- An applicationId obtained from the StackHawk platform. --
