--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -19,7 +19,7 @@ app:
   # Docs: https://docs.stackhawk.com/
   # Contact Support: support@stackhawk.com
 app:
-  waitForAppTarget:5000
+  waitForAppTarget:
     path: /WebGoat
 hawk:
   spider:
