--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -18,10 +18,10 @@ app:
 # -- Help Section --
   # Docs: https://docs.stackhawk.com/
   # Contact Support: support@stackhawk.com
-app:
-  host:['localhost']
-  waitForAppTarget:
-    path: ['/WebGoat']
+#app:
+#  host:['localhost']
+#  waitForAppTarget:
+  path: ['/WebGoat']
 hawk:
   spider:
     seedPaths: ['/WebGoat']
