--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -19,7 +19,7 @@ app:
   # Docs: https://docs.stackhawk.com/
   # Contact Support: support@stackhawk.com
 app:
-#  host:['localhost']
+  host:['localhost']
 #  waitForAppTarget:
   path: ['/WebGoat']
 hawk:
